# tts-to-obsidian-markdown

./: .gitignore  README.md  config.yaml.example  main.py  pyproject.toml  requirements.txt  setup.sh
templates/: diary_template.md
tests/: test_basic.py
tts_to_obsidian/audio/: recorder.py
tts_to_obsidian/enhancement/: processor.py
tts_to_obsidian/obsidian/: note_generator.py
tts_to_obsidian/transcription/: whisper.py
tts_to_obsidian/utils/: helpers.py
